    third-party tools may ignore it if they do not support
    it.  Thanks to Andrej Shadura for reporting the issue
    over IRC.
  * doc/PROGRAMMING: Introduce a section on the NOOP PROMISE
    comment.
  * dh: In compat 13, skip calls to hook and override targets
    for dh_auto_test, dh_dwz and dh_strip.  Thanks to
    Mike Hommey for suggesting it.  (Closes: #568897)

 -- Niels Thykier <niels@thykier.net>  Sun, 19 Jan 2020 10:43:39 +0000

debhelper (12.8) unstable; urgency=medium

  [ Niels Thykier ]
  * Dh_Lib.pm: Simplify internal loggning of which commands
    have been run.  We are no longer interested in whether
    it was an override target or not.
  * dh: Support "execute_before_X" and "execute_after_X"
    targets in debian/rules.  This is useful for injecting
    commands before or after the command "X" that dh runs.
    Note this feature requires compat 10 or later due to
    internal limitations in debhelper.  Attempts to use
    it in compat 9 will trigger an error.  Thanks to
    Christoph Berg for the suggestion.  (Closes: #885994)
  * dh: Detect and warn about override and hook targets
    for known obsolete commands.  In compat 13, this will
    be an error instead of a warning.
  * dh: Reset umask to 0022 as a consistent default value.
    Thanks to Thorsten Glaser for the suggestion.
    (Closes: #944691)
  * dh_missing: The --fail-missing parameter is now default
    in compat 13.  Thanks to Mattia Rizzolo for the
    suggestion.  (Closes: #917368)
  * dh_installtmpfiles: New command extracted from
    dh_installsystem that will handle tmpfiles.d
    configuration.  Thanks to Michael Biebl for the
    suggestion.  (Closes: #944478)
  * dh_installsystemd: In compat 13, this command will no
    longer manage tmpfiles.d configuration.
  * dh: Run dh_installtmpfiles by default in compat 13.
  * Dh_Lib.pm: Emit "error" and "warning" with error and
    warning messages.  Thanks to Paul Wise for the
    suggestion.  (Closes: #906723)