@@ -259,16 +259,6 @@ For example, if you need to call the command with special options only for a
 couple of binary packages, pass this option to the last call of the command to
 process the rest of packages with default settings. 
 
-=item B<--ignore=>I<file>
-
-Ignore the specified file. This can be used if F<debian/> contains a debhelper
-config file that a debhelper command should not act on. Note that
-F<debian/compat>, F<debian/control>, and F<debian/changelog> can't be ignored, but
-then, there should never be a reason to ignore those files.
-
-For example, if upstream ships a F<debian/init> that you don't want
-B<dh_installinit> to install, use B<--ignore=debian/init>
-
 =item B<-P>I<tmpdir>, B<--tmpdir=>I<tmpdir>
 
 Use I<tmpdir> for package build directory. The default is debian/I<package>
