@@ -9,6 +9,9 @@ debhelper (12.9) UNRELEASED; urgency=medium
   * dh: In compat 13, skip calls to hook and override targets
     for dh_auto_test, dh_dwz and dh_strip.  Thanks to
     Mike Hommey for suggesting it.  (Closes: #568897)
+  * Dh_Getopt.pm: Remove support for "--ignore".  No package
+    uses it any more.  For most parts, it has been replaced
+    by the "3.0 (quilt)" source format.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 19 Jan 2020 10:43:39 +0000
 
